--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,31 @@
 .jumbotron{
-    background-color: azure;
+	background-color: yellow;
+	color: black;
+	margin-top: 50px;
 }
+
 footer{
-    padding: 10px 10px 0 10px;
-    background-color: azure;
-    margin-bottom: 0;
+	padding: 10px 10px 0 10px;
+	background-color: yellow;
+	margin-bottom: 0px;
+	margin-top: 10px;
 }
+
 .card-hotel{
-    flex: 1 150px;
-    padding: 2px;    
+	flex: 1 200px;
+	/*padding: 2px 0px 2px 0px;*/
+	margin-top: 10px;
 }
+
 .btn-reserva{
-    width: 100%;
+	width: 100%;
+	border-radius: 0px;
+}
+
+.footer-address-icon{
+	padding-right: 10px;
+}
+
+.tab-content{
+	padding-top: 10px;
 }
